--- a/partials/tabs/students.html
+++ b/partials/tabs/students.html
@@ -7,7 +7,7 @@ title: coala GSoC Projects Report
     <div class="col m8 offset-m2">
       <h1 class="fine center">Hello World!</h1>
       <h4 class="light center">
-       The students who've participted in Google Summer of Code with {{ site.organization }}
+       The students who've participated in Google Summer of Code with {{ site.organization }}
       </h4>
     </div>
   </div>
