--- a/resources/css/coala.css
+++ b/resources/css/coala.css
@@ -844,3 +844,18 @@ a.chip i {
   text-indent: 1em;
   box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.3) !important;
 }
+
+/* Hidden AI prompt: visible to machines (when copying) but not to humans */
+.ai-prompt {
+  position: absolute;
+  left: -9999px;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  opacity: 0;
+  pointer-events: none;
+  user-select: text; /* Allow text selection for copying */
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+}
